--- a/css/scss/_portfolio.scss
+++ b/css/scss/_portfolio.scss
@@ -11,15 +11,13 @@
 
 .quote_clientes p {
 	text-align: center;
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-size: 18px;
-	line-height: 25px;
 	font-style: italic;
 	margin-bottom: 20px;
+	@include tipo-2(18);
 }
 
 .quote_clientes cite {
-	font-size: 18px;
+	@include tipo-1(18);
 	font-weight: bold;
 	text-align: right;
 	float: right;
@@ -81,6 +79,6 @@
 }
 
 .rslides_tabs li a:hover, .rslides_tabs li.rslides_here a {
-	background: #fec63e;
-	color: #fec63e;
+	background: $amarelo;
+	color: $amarelo;
 }
